--- a/estilos/style.css
+++ b/estilos/style.css
@@ -75,13 +75,13 @@ p.container__texto-destaque {
     font-weight: 800;
 }
   
-div.container__botoes {
+div.container__buttons {
     display: flex;
     width: 100%;
     margin: 5% 0;
     gap: 5%;
 }
-a.container__cta {
+.container__cta {
     text-decoration: none;
 
     display: flex;
@@ -100,14 +100,19 @@ a.container__cta {
     color: var(--cor-secundaria);
 }
 
-a.container__cta img {
+.container__cta img {
     width: 15%;
 }
 
-a.container__cta:hover {
+.container__cta:hover {
     background-color: var(--cor-terciaria);
     color: var(--cor-primaria);
     font-weight: 500;
+}
+
+button.container__cta {
+    background-color: #000000;
+    cursor: pointer;
 }
 
 .container__img-destaque {
